# situational_graphs_datasets

./: LICENSE  MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
config/: dataset_testing.json  graph_factor_nn_wall.json  graph_matching.json  graph_reasoning.json
graph_datasets/: SceneGraphLab.py  SyntheticDatasetGenerator.py  dataset_visualizer_stack.py  graph_visualizer.py  test_mindist_segments.py
graph_datasets/config/: dataset_testing.json  graph_reasoning_grapharm.json
situational_graphs_datasets/: SyntheticDatasetGenerator.py  dataset_visualizer_stack.py
src/graph_datasets/: NodeEdgeFeatureEmbeddingBuildier.py  SyntheticDatasetGenerator.py  dataset_visualizer_stack.py  graph_visualizer.py
src/graph_datasets/config/: dataset_testing.json  graph_factor_nn_floor.json  graph_factor_nn_room.json  graph_matching.json  graph_reasoning.json
