<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>situational_graphs_datasets</name>
  <version>0.0.1</version>
  <description>Graph datasets for situational_graphs_reasoning repo</description>
  <maintainer email="josmilrom@gmail.com">adminpc</maintainer>
  <license>GPLv3</license>

  <depend>python3-matplotlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
