<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_datasets</name>
  <version>0.0.0</version>
  <description>Graph datasets for graph_reasoning repo</description>
  <maintainer email="josmilrom@gmail.com">adminpc</maintainer>
  <license>GPLv3</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>ament_cmake_python</exec_depend>
</package>
